--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/freedom-cms
+    url: jdbc:mysql://192.168.3.35:3306/freedom-cms
     username: root
     password: admin
     driver-class-name: com.mysql.jdbc.Driver
