--- a/ttt/src/main/resources/mysql/jdbc.properties
+++ b/ttt/src/main/resources/mysql/jdbc.properties
@@ -3,10 +3,10 @@ jdbc.driver.class=com.mysql.jdbc.Driver
 jdbc.db_maxActive=50
 
 #alpha
-jdbc.url=jdbc\:mysql\:///azy2?useUnicode\=true&characterEncoding\=utf8&&zeroDateTimeBehavior\=convertToNull
+jdbc.url=jdbc:mysql://192.168.3.35:3306/azy2?useUnicode=true&characterEncoding=utf8&&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
 jdbc.password=root
 
-#jdbc.url2=jdbc\:mysql\://192.168.0.253\:3306/azy?useUnicode\=true&characterEncoding\=utf8&&zeroDateTimeBehavior\=convertToNull
+#jdbc.url2=jdbc:mysql://192.168.0.253:3306/azy?useUnicode=true&characterEncoding=utf8&&zeroDateTimeBehavior=convertToNull
 #jdbc.username2=root
 #jdbc.password2=root
