1-将连接池换成Druid,看是否能解决MYSQL8小时问题 2-添加Log4J日志打印
下一步准备将JAR包换成WAR包以方便远程跟踪代码,但也需要保留JAR打包运行方式.

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,25 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+		<dependency> 
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j</artifactId>
+		</dependency>
+		<!-- <dependency> 引入log4j2依赖
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		<dependency>  加上这个才能辨认到log4j2.yml文件
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -77,25 +95,30 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.1.39</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.16</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<resources>
-	            <resource>
-	                <directory>${basedir}/src/main/webapp</directory>
-                    <!--注意此次必须要放在此目录下才能被访问到-->
-	                <targetPath>META-INF/resources</targetPath> 
-	                <includes>
-	                    <include>**/**</include>
-	                </includes>
-	            </resource>
-	            <resource>
-	                <directory>${basedir}/src/main/resources</directory>
-	                <includes>
-	                    <include>**/**</include>
-	                </includes>
-	            </resource>
-	    </resources>
+			<resource>
+				<directory>${basedir}/src/main/webapp</directory>
+				<!--注意此次必须要放在此目录下才能被访问到 -->
+				<targetPath>META-INF/resources</targetPath>
+				<includes>
+					<include>**/**</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>${basedir}/src/main/resources</directory>
+				<includes>
+					<include>**/**</include>
+				</includes>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -108,19 +131,19 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
-			<plugin>  
-                <groupId>org.apache.maven.plugins</groupId>  
-                <artifactId>maven-jar-plugin</artifactId>  
-                <configuration>  
-                    <archive>  
-                        <manifest>  
-                            <mainClass>freedom.cms.Application</mainClass><!-- 入口程序 -->  
-                            <addClasspath>true</addClasspath> 
-                            <classpathPrefix>lib/</classpathPrefix>  
-                        </manifest>  
-                    </archive>  
-                </configuration>  
-            </plugin>  
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>freedom.cms.Application</mainClass><!-- 入口程序 -->
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
