--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,26 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/freedom-cms
-#spring.datasource.username=root
-#spring.datasource.password=admin
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#server.port=8080
+server:
+  port: 800
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.3.35:3306/freedom-cms-new
+    url: jdbc:mysql://127.0.0.1:3306/freedom-cms-new
     username: root
     password: admin
-    driver-class-name: com.mysql.jdbc.Driver
-    
+    driverClassName: com.mysql.jdbc.Driver
+    initialSize: 5
+    minIdle: 10
+    maxActive: 50
+    maxWait: 20000
+    timeBetweenEvictionRunsMillis: 30000
+    minEvictableIdleTimeMillis: 30000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxPoolPreparedStatementPerConnectionSize: 50
+    filters: stat,wall,log4j
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 kaptcha:
   session:
